css refactor, section padding, overflow-x prevention

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -23,6 +23,7 @@ html {
 
 body {
     font-family: $font-sans;
+    overflow-x: hidden;
 }
 
 a {
@@ -50,7 +51,7 @@ main {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 0 0 20rem;
+    padding: 0 0 25rem;
     
     .main-bg-clip {
         position: absolute;
@@ -410,6 +411,7 @@ nav[aria-expanded="true"] + .backdrop {
         position: relative;
         top: 0;
         font-size: 1.5rem;
+        max-width: 90vw;
         margin: 3rem 0;
         padding: 1rem;
         border: 0.25rem solid $secondary-color;
